DSL_MLParser.py
# Generated from DSL_ML.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DSL_MLParser ( Parser ):

    grammarFileName = "DSL_ML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'='", "';'", "'['", "','", "']'", 
                     "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
                     "'plot'", "'readFile'", "'writeFile'", "'regression'", 
                     "'kmeans'", "'transpose'", "'inverse'", "'sin'", "'cos'", 
                     "'sqrt'", "'if'", "'then'", "'else'", "'while'", "'for'", 
                     "'in'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'{'", "'}'", "'..'", "'print'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUMBER", "STRING", "BOOLEAN", 
                      "WHITESPACE", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_variableDeclaration = 2
    RULE_assignment = 3
    RULE_expression = 4
    RULE_functionCall = 5
    RULE_conditional = 6
    RULE_loop = 7
    RULE_condition = 8
    RULE_comparisonOperator = 9
    RULE_block = 10
    RULE_range = 11
    RULE_matrixOperation = 12
    RULE_matrixRow = 13
    RULE_graphOperation = 14
    RULE_fileOperation = 15
    RULE_mlOperation = 16
    RULE_printStatement = 17
    RULE_argumentList = 18

    ruleNames =  [ "program", "statement", "variableDeclaration", "assignment", 
                   "expression", "functionCall", "conditional", "loop", 
                   "condition", "comparisonOperator", "block", "range", 
                   "matrixOperation", "matrixRow", "graphOperation", "fileOperation", 
                   "mlOperation", "printStatement", "argumentList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    ID=41
    NUMBER=42
    STRING=43
    BOOLEAN=44
    WHITESPACE=45
    COMMENT=46
    MULTILINE_COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DSL_MLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_MLParser.StatementContext)
            else:
                return self.getTypedRuleContext(DSL_MLParser.StatementContext,i)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DSL_MLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3299374759938) != 0):
                self.state = 38
                self.statement()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(DSL_MLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(DSL_MLParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(DSL_MLParser.AssignmentContext,0)


        def conditional(self):
            return self.getTypedRuleContext(DSL_MLParser.ConditionalContext,0)


        def loop(self):
            return self.getTypedRuleContext(DSL_MLParser.LoopContext,0)


        def matrixOperation(self):
            return self.getTypedRuleContext(DSL_MLParser.MatrixOperationContext,0)


        def graphOperation(self):
            return self.getTypedRuleContext(DSL_MLParser.GraphOperationContext,0)


        def fileOperation(self):
            return self.getTypedRuleContext(DSL_MLParser.FileOperationContext,0)


        def mlOperation(self):
            return self.getTypedRuleContext(DSL_MLParser.MlOperationContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(DSL_MLParser.PrintStatementContext,0)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DSL_MLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.conditional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.matrixOperation()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.graphOperation()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.fileOperation()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.mlOperation()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 54
                self.printStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DSL_MLParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(DSL_MLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = DSL_MLParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(DSL_MLParser.T__0)
            self.state = 58
            self.match(DSL_MLParser.ID)
            self.state = 59
            self.match(DSL_MLParser.T__1)
            self.state = 60
            self.expression(0)
            self.state = 61
            self.match(DSL_MLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DSL_MLParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(DSL_MLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = DSL_MLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(DSL_MLParser.ID)
            self.state = 64
            self.match(DSL_MLParser.T__1)
            self.state = 65
            self.expression(0)
            self.state = 66
            self.match(DSL_MLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(DSL_MLParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(DSL_MLParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(DSL_MLParser.BOOLEAN, 0)

        def ID(self):
            return self.getToken(DSL_MLParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_MLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DSL_MLParser.ExpressionContext,i)


        def functionCall(self):
            return self.getTypedRuleContext(DSL_MLParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DSL_MLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.state = 69
                self.match(DSL_MLParser.NUMBER)
                pass
            elif token in [43]:
                self.state = 70
                self.match(DSL_MLParser.STRING)
                pass
            elif token in [44]:
                self.state = 71
                self.match(DSL_MLParser.BOOLEAN)
                pass
            elif token in [41]:
                self.state = 72
                self.match(DSL_MLParser.ID)
                pass
            elif token in [4]:
                self.state = 73
                self.match(DSL_MLParser.T__3)
                self.state = 74
                self.expression(0)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 75
                    self.match(DSL_MLParser.T__4)
                    self.state = 76
                    self.expression(0)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 82
                self.match(DSL_MLParser.T__5)
                pass
            elif token in [7]:
                self.state = 84
                self.match(DSL_MLParser.T__6)
                self.state = 85
                self.expression(0)
                self.state = 86
                self.match(DSL_MLParser.T__7)
                pass
            elif token in [15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                self.state = 88
                self.functionCall()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DSL_MLParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 91
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 92
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 32256) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 93
                    self.expression(3) 
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argumentList(self):
            return self.getTypedRuleContext(DSL_MLParser.ArgumentListContext,0)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_MLParser.STRING)
            else:
                return self.getToken(DSL_MLParser.STRING, i)

        def expression(self):
            return self.getTypedRuleContext(DSL_MLParser.ExpressionContext,0)


        def NUMBER(self):
            return self.getToken(DSL_MLParser.NUMBER, 0)

        def ID(self):
            return self.getToken(DSL_MLParser.ID, 0)

        def getRuleIndex(self):
            return DSL_MLParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = DSL_MLParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionCall)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(DSL_MLParser.T__14)
                self.state = 100
                self.match(DSL_MLParser.T__6)
                self.state = 101
                self.argumentList()
                self.state = 102
                self.match(DSL_MLParser.T__7)
                self.state = 103
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(DSL_MLParser.T__15)
                self.state = 106
                self.match(DSL_MLParser.T__6)
                self.state = 107
                self.match(DSL_MLParser.STRING)
                self.state = 108
                self.match(DSL_MLParser.T__7)
                self.state = 109
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(DSL_MLParser.T__16)
                self.state = 111
                self.match(DSL_MLParser.T__6)
                self.state = 112
                self.match(DSL_MLParser.STRING)
                self.state = 113
                self.match(DSL_MLParser.T__4)
                self.state = 114
                self.expression(0)
                self.state = 115
                self.match(DSL_MLParser.T__7)
                self.state = 116
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(DSL_MLParser.T__17)
                self.state = 119
                self.match(DSL_MLParser.T__6)
                self.state = 120
                self.match(DSL_MLParser.STRING)
                self.state = 121
                self.match(DSL_MLParser.T__4)
                self.state = 122
                self.match(DSL_MLParser.STRING)
                self.state = 123
                self.match(DSL_MLParser.T__4)
                self.state = 124
                self.match(DSL_MLParser.STRING)
                self.state = 125
                self.match(DSL_MLParser.T__7)
                self.state = 126
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.match(DSL_MLParser.T__18)
                self.state = 128
                self.match(DSL_MLParser.T__6)
                self.state = 129
                self.match(DSL_MLParser.STRING)
                self.state = 130
                self.match(DSL_MLParser.T__4)
                self.state = 131
                self.match(DSL_MLParser.NUMBER)
                self.state = 132
                self.match(DSL_MLParser.T__7)
                self.state = 133
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 6)
                self.state = 134
                self.match(DSL_MLParser.T__19)
                self.state = 135
                self.match(DSL_MLParser.T__6)
                self.state = 136
                self.match(DSL_MLParser.ID)
                self.state = 137
                self.match(DSL_MLParser.T__7)
                self.state = 138
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 139
                self.match(DSL_MLParser.T__20)
                self.state = 140
                self.match(DSL_MLParser.T__6)
                self.state = 141
                self.match(DSL_MLParser.ID)
                self.state = 142
                self.match(DSL_MLParser.T__7)
                self.state = 143
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 8)
                self.state = 144
                self.match(DSL_MLParser.T__21)
                self.state = 145
                self.match(DSL_MLParser.T__6)
                self.state = 146
                self.expression(0)
                self.state = 147
                self.match(DSL_MLParser.T__7)
                self.state = 148
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 9)
                self.state = 150
                self.match(DSL_MLParser.T__22)
                self.state = 151
                self.match(DSL_MLParser.T__6)
                self.state = 152
                self.expression(0)
                self.state = 153
                self.match(DSL_MLParser.T__7)
                self.state = 154
                self.match(DSL_MLParser.T__2)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 10)
                self.state = 156
                self.match(DSL_MLParser.T__23)
                self.state = 157
                self.match(DSL_MLParser.T__6)
                self.state = 158
                self.expression(0)
                self.state = 159
                self.match(DSL_MLParser.T__7)
                self.state = 160
                self.match(DSL_MLParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(DSL_MLParser.ConditionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_MLParser.BlockContext)
            else:
                return self.getTypedRuleContext(DSL_MLParser.BlockContext,i)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = DSL_MLParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(DSL_MLParser.T__24)
            self.state = 165
            self.match(DSL_MLParser.T__6)
            self.state = 166
            self.condition()
            self.state = 167
            self.match(DSL_MLParser.T__7)
            self.state = 168
            self.match(DSL_MLParser.T__25)
            self.state = 169
            self.block()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 170
                self.match(DSL_MLParser.T__26)
                self.state = 171
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(DSL_MLParser.ConditionContext,0)


        def block(self):
            return self.getTypedRuleContext(DSL_MLParser.BlockContext,0)


        def ID(self):
            return self.getToken(DSL_MLParser.ID, 0)

        def range_(self):
            return self.getTypedRuleContext(DSL_MLParser.RangeContext,0)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = DSL_MLParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loop)
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.match(DSL_MLParser.T__27)
                self.state = 175
                self.match(DSL_MLParser.T__6)
                self.state = 176
                self.condition()
                self.state = 177
                self.match(DSL_MLParser.T__7)
                self.state = 178
                self.block()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.match(DSL_MLParser.T__28)
                self.state = 181
                self.match(DSL_MLParser.T__6)
                self.state = 182
                self.match(DSL_MLParser.ID)
                self.state = 183
                self.match(DSL_MLParser.T__29)
                self.state = 184
                self.range_()
                self.state = 185
                self.match(DSL_MLParser.T__7)
                self.state = 186
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_MLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DSL_MLParser.ExpressionContext,i)


        def comparisonOperator(self):
            return self.getTypedRuleContext(DSL_MLParser.ComparisonOperatorContext,0)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = DSL_MLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.expression(0)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 135291469824) != 0):
                self.state = 191
                self.comparisonOperator()
                self.state = 192
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DSL_MLParser.RULE_comparisonOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonOperator" ):
                listener.enterComparisonOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonOperator" ):
                listener.exitComparisonOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparisonOperator" ):
                return visitor.visitComparisonOperator(self)
            else:
                return visitor.visitChildren(self)




    def comparisonOperator(self):

        localctx = DSL_MLParser.ComparisonOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comparisonOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 135291469824) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_MLParser.StatementContext)
            else:
                return self.getTypedRuleContext(DSL_MLParser.StatementContext,i)


        def getRuleIndex(self):
            return DSL_MLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)
